--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,42 @@
-div {
-border: 1px solid;
-background-color: rgb(204, 217, 221);
-margin: 10px;
-box-sizing: border-box;
+body {
+	margin: 50px auto;
+	padding: 25px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
+p {
+	margin: 0;
+}
+h1 {
+	margin-bottom: 50px;
+}
+img {
+	width: 100px;
+}
+.contactItem {
+	padding: 20px 0;
+	text-align: left;
+	display: flex;
+	margin-bottom: 20px;
 
-* {
-	box-sizing: border-box;
-  }
-ul {
-    padding: 10px;
+}
+.form-control {
+	margin: 20px;
+}
+.contactForm {
+	border: 1px solid #000;
 }
 .contactsList {
-	padding-bottom: 20px;
+	border: 1px solid grey;
+	width: 700px;
+	margin: 25px;
+}
+.contactInfos {
+	display: inline-block;
+	margin: 15px;
 	
 }
-button {
-	color: black;
-	background-color: rgb(84, 84, 231);
-	font-size: 25px;
-	margin: 50px;
-}
-form {
-	margin: 20px;
-	border: 1px solid;
-	height: 250px;
-}
-input {
-	width: 40%;
-	margin: 40px;
-	height: 30px;
-}
-
-p {
-	font-size: 20px;
-}
-
-img {
-	margin-left: 90px;
-	margin-top: 40px;
-
-}
-.contactLabel {
-	margin-left: 50%;
-
-    
-  
+.Title {
+	text-align: center;
 }
